# clasSCII

./: .gitignore  ASCIIFORGE_SPEC.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy_errors.txt
.github/workflows/: ci.yml  release.yml
config/: default.toml
config/presets/: 01_cyber_braille.toml  02_matrix.toml  03_ghost_edge.toml  04_pure_ascii.toml  05_classic_gradient.toml  06_vector_edges.toml  07_neon_abyss.toml  08_cyber_noise.toml  09_brutalism_mono.toml  10_ethereal_shape.toml  11_reactive.toml  12_deep_zoom.toml  13_breath.toml  14_interference.toml  15_noir.toml  16_aurora.toml  17_static.toml  18_spectral_bands.toml  19_cinematic_camera.toml
crates/af-app/: Cargo.toml  build.rs
crates/af-app/src/: app.rs  batch.rs  cli.rs  creation.rs  generative.rs  hotreload.rs  main.rs  pipeline.rs
crates/af-ascii/: Cargo.toml
crates/af-ascii/src/: braille.rs  color_map.rs  compositor.rs  dither.rs  edge.rs  halfblock.rs  luminance.rs  quadrant.rs
crates/af-audio/: Cargo.toml
crates/af-audio/src/: batch_analyzer.rs  decode.rs  features.rs  lib.rs  mfcc.rs  smoothing.rs  state.rs
crates/af-core/: Cargo.toml
crates/af-core/src/: charset.rs  color.rs  config.rs  feature_timeline.rs  frame.rs  traits.rs
crates/af-export/: Cargo.toml
crates/af-export/src/: muxer.rs
crates/af-render/: Cargo.toml
crates/af-render/src/: camera.rs  effects.rs  lib.rs  ui.rs  widgets.rs
crates/af-source/: Cargo.toml
crates/af-source/src/: folder_batch.rs  (+3 more)
docs/: AUDIO_GUIDE.md  EFFECTS_REFERENCE.md  PRESET_GUIDE.md  TIPS_AND_TRICKS.md  TOML_SCHEMA.md  USAGE.md
